--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Moon-Ga Wanted_Pre_Onboarding Refactor</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
